// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given invalid frontmatter for / should not render a CSP 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Markdown Home
    </title>
  </head>
</html>
<body>
  <h2 id="Home">
    Home
  </h2>
</body>
`;

exports[`given invalid frontmatter for markdown-1 should not render a CSP 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Markdown 1
    </title>
  </head>
</html>
<body>
  <h1>
    Markdown 1
  </h1>
</body>
`;

exports[`given mixed mode policies and env=dev for / should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-home-default.com; img-src https://frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given mixed mode policies and env=dev for markdown-1 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://dev-markdown-1-img.com https://frontmatter-markdown-1-img-1.com https://frontmatter-markdown-1-img-2.com; default-src https://frontmatter-markdown-1-default-1.com https://frontmatter-markdown-1-default-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=dev for markdown-2 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://dev-markdown-2-default-1.com https://dev-markdown-2-default-2.com https://frontmatter-markdown-2-default-1.com https://frontmatter-markdown-2-default-2.com; img-src https://dev-markdown-2-img.com https://frontmatter-markdown-2-img-1.com https://frontmatter-markdown-2-img-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for / should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-frontmatter-home-default.com; img-src https://prod-frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for markdown-1 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-markdown-1-default-1.com https://prod-markdown-1-default-2.com https://frontmatter-markdown-1-default-1.com https://frontmatter-markdown-1-default-2.com; img-src https://prod-markdown-1-img.com https://frontmatter-markdown-1-img-1.com https://frontmatter-markdown-1-img-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for markdown-2 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://prod-markdown-2-img.com https://frontmatter-markdown-2-img-1.com https://frontmatter-markdown-2-img-2.com; default-src https://frontmatter-markdown-2-default-1.com https://frontmatter-markdown-2-default-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for / should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-config-index-default.com https://dev-frontmatter-home-default.com; img-src https://dev-frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for markdown-1 should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://dev-frontmatter-markdown-1-default-1.com https://dev-frontmatter-markdown-1-default-2.com; img-src https://dev-frontmatter-markdown-1-img-1.com https://dev-frontmatter-markdown-1-img-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for markdown-2 should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://dev-frontmatter-markdown-2-default-1.com https://dev-frontmatter-markdown-2-default-2.com; img-src https://dev-frontmatter-markdown-2-img-1.com https://dev-frontmatter-markdown-2-img-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given the custom permalink / should ignore the dirname and use only the basename: / 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-index-default.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`given the custom permalink 2001/01/01/markdown-1 should ignore the dirname and use only the basename: markdown-1 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-markdown-1-default-1.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given the custom permalink page-1/ should ignore the dirname and use only the basename: page-1 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-page-1-default-1.com"
    >
    <title>
      Page 1
    </title>
  </head>
  <body>
    <h1>
      Page 1
    </h1>
  </body>
</html>
`;

exports[`given the path "/" should only match against the "/" policy path 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://single-slash.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`given the path "/index.html" should only match against the "/" policy path 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://single-slash.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`given the path "index.html" should only match against the "/" policy path 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://single-slash.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`when inline tag sources are enabled path: "/" should contain a hash+base64 source for each script/style, that merges with existing policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-home-default.com; script-src 'sha512-ZGUzZTljYzc4M2M1NjU5MjEwNTJlYTUyZWUzYzAyMzc4NDFhODIxYTU1NmZkZTUwZjI2MTJjNmExZGZjMWQzMWQzZDAxOTQyMmU3ZjY5YmJjMDQzYWNjYTc0YzEzZDY0ODI5NWI2MTQ0ZTA3ZDljMjE3NTg0ZmRkNjljNGM3ZDE=' 'sha512-MzI4ZDg4OGFkYjY5MGIyY2MzZmIzZWVlMGJjN2YxMDNmMDJhNjI0NzFhNGFmMDJlYWFkZDMyZGIwZDI3MjMyNWIzZmI1OTQ0NDM5YjBhMTA0YTIwNjNhYmVkYzU4ZjliYmFmNWZlNWNmYWRhOTRiYmFiMjFkMGRlM2VmYmU4OTA='; style-src 'sha512-YzU1ZGUzNWU5Nzc2NDBkMTI3ZmY5MDIwOTEwMmE1OGFkZjQ2M2UzY2RmMzc2YjM5N2M1MjI2MDQ1Mjk0N2JjZGYyZTdmZDhhYjVhMmYxMTZmMWMxODJmMDQ0YjllMGY2MGQ0OWVmYzJmZDZjMDk2YTFmYjIxYmQ3MjUwMThiOTk=' 'sha512-NzFiYTMzMmIxZjQ5MTRmOTMwODM4MDJhNzVlMzM3MjhlZDFmZTY5MDNiODIzMjhhMWE3Nzg2MjNkNGM1MTRlNWIxY2NmYzdlYWVjM2RkY2UyODYwYTgyNzc5NTE5MTQyZGE0OWUxN2UyYWJmYzc2NzgzZTYwOGI5ODZkOTMxOTc='"
    >
    <title>
      Markdown Home
    </title>
    <script>
      const a = 1;
    </script>
    <script>
      const b = 1;
const c = 1;
    </script>
    <style>
      div { color: red; }
    </style>
    <style>
      div {
  color: blue;
}
    </style>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`when inline tag sources are enabled path: "markdown-1" should contain a hash+base64 source for each script/style, that merges with existing policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-markdown-1-default-1.com https://frontmatter-markdown-1-default-1.com; script-src 'sha512-ZGUzZTljYzc4M2M1NjU5MjEwNTJlYTUyZWUzYzAyMzc4NDFhODIxYTU1NmZkZTUwZjI2MTJjNmExZGZjMWQzMWQzZDAxOTQyMmU3ZjY5YmJjMDQzYWNjYTc0YzEzZDY0ODI5NWI2MTQ0ZTA3ZDljMjE3NTg0ZmRkNjljNGM3ZDE=' 'sha512-MzI4ZDg4OGFkYjY5MGIyY2MzZmIzZWVlMGJjN2YxMDNmMDJhNjI0NzFhNGFmMDJlYWFkZDMyZGIwZDI3MjMyNWIzZmI1OTQ0NDM5YjBhMTA0YTIwNjNhYmVkYzU4ZjliYmFmNWZlNWNmYWRhOTRiYmFiMjFkMGRlM2VmYmU4OTA='; style-src 'sha512-YzU1ZGUzNWU5Nzc2NDBkMTI3ZmY5MDIwOTEwMmE1OGFkZjQ2M2UzY2RmMzc2YjM5N2M1MjI2MDQ1Mjk0N2JjZGYyZTdmZDhhYjVhMmYxMTZmMWMxODJmMDQ0YjllMGY2MGQ0OWVmYzJmZDZjMDk2YTFmYjIxYmQ3MjUwMThiOTk=' 'sha512-NzFiYTMzMmIxZjQ5MTRmOTMwODM4MDJhNzVlMzM3MjhlZDFmZTY5MDNiODIzMjhhMWE3Nzg2MjNkNGM1MTRlNWIxY2NmYzdlYWVjM2RkY2UyODYwYTgyNzc5NTE5MTQyZGE0OWUxN2UyYWJmYzc2NzgzZTYwOGI5ODZkOTMxOTc='"
    >
    <title>
      Markdown 1
    </title>
    <script>
      const a = 1;
    </script>
    <script>
      const b = 1;
const c = 1;
    </script>
    <style>
      div { color: red; }
    </style>
    <style>
      div {
  color: blue;
}
    </style>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`when inline tag sources are enabled path: "markdown-2" should contain a hash+base64 source for each script/style, that merges with existing policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://frontmatter-markdown-2-img-1.com; script-src 'sha512-ZGUzZTljYzc4M2M1NjU5MjEwNTJlYTUyZWUzYzAyMzc4NDFhODIxYTU1NmZkZTUwZjI2MTJjNmExZGZjMWQzMWQzZDAxOTQyMmU3ZjY5YmJjMDQzYWNjYTc0YzEzZDY0ODI5NWI2MTQ0ZTA3ZDljMjE3NTg0ZmRkNjljNGM3ZDE=' 'sha512-MzI4ZDg4OGFkYjY5MGIyY2MzZmIzZWVlMGJjN2YxMDNmMDJhNjI0NzFhNGFmMDJlYWFkZDMyZGIwZDI3MjMyNWIzZmI1OTQ0NDM5YjBhMTA0YTIwNjNhYmVkYzU4ZjliYmFmNWZlNWNmYWRhOTRiYmFiMjFkMGRlM2VmYmU4OTA='; style-src 'sha512-YzU1ZGUzNWU5Nzc2NDBkMTI3ZmY5MDIwOTEwMmE1OGFkZjQ2M2UzY2RmMzc2YjM5N2M1MjI2MDQ1Mjk0N2JjZGYyZTdmZDhhYjVhMmYxMTZmMWMxODJmMDQ0YjllMGY2MGQ0OWVmYzJmZDZjMDk2YTFmYjIxYmQ3MjUwMThiOTk=' 'sha512-NzFiYTMzMmIxZjQ5MTRmOTMwODM4MDJhNzVlMzM3MjhlZDFmZTY5MDNiODIzMjhhMWE3Nzg2MjNkNGM1MTRlNWIxY2NmYzdlYWVjM2RkY2UyODYwYTgyNzc5NTE5MTQyZGE0OWUxN2UyYWJmYzc2NzgzZTYwOGI5ODZkOTMxOTc='"
    >
    <title>
      Markdown 2
    </title>
    <script>
      const a = 1;
    </script>
    <script>
      const b = 1;
const c = 1;
    </script>
    <style>
      div { color: red; }
    </style>
    <style>
      div {
  color: blue;
}
    </style>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;
